<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yavuz.profilescreen.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/steve_rogers"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:contentPaddingTop="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingBottom="15dp"
                        app:cardCornerRadius="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/steve_rogers"
                                android:textStyle="bold"
                                android:textSize="25sp"
                                android:layout_marginTop="50dp"
                                android:layout_gravity="center_horizontal"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/actor"
                                android:textSize="15sp"
                                android:layout_marginTop="10dp"
                                android:layout_gravity="center_horizontal"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/film_and_cinema"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="italic"
                                android:layout_marginTop="10dp"
                                android:layout_gravity="center_horizontal"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/born"
                                android:textStyle="bold"
                                android:textSize="17sp"
                                android:layout_marginTop="10dp"
                                android:layout_gravity="center_horizontal"/>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_marginTop="20dp">

                        <LinearLayout
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/ten"
                                android:textStyle="bold"
                                android:textSize="35sp"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/rating"
                                android:textSize="20sp"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/hundred"
                                android:textStyle="bold"
                                android:textSize="35sp"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/projects"
                                android:textSize="20sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="30dp"
                        android:weightSum="2">

                        <Button
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:textColor="@color/colorAccent"
                            android:background="@drawable/button_outline"
                            android:text="@string/view_portfolio"/>


                        <Button
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:background="@drawable/button_outline2"
                            android:text="@string/contact"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
